--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,8 +17,25 @@ main {
     flex-direction: column;
 }
 
+header {
+
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    min-height: 100px;
+    padding: 15px;
+
+}
+
+header a {
+
+    text-decoration: none;
+    color: var(--pink);
+}
+
 .container {
     max-width: 60%;
     margin: 20px auto;
 }
 
+ 
