--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -43,4 +43,21 @@ header a {
     font-size: larger;
 }
 
+button {
+    
+    background-color: var(--purple);
+    color: white;
+    font-size: 20px;
+    border: 0px;
+    border-radius: 5px;
+    padding: 5px;
+    margin: 10px 10px 10px 0px;
+    display: block;
+}
+
+button:hover {
+
+background-color: var(--pink);
+}
+
 
